# selenium

./: README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
page_objects/: base_page.py  exception_page.py  logged_in_successfully.py  login_page.py
reports/: report.html
tests/: conftest.py  test_exceptions.py  test_login_page.py  test_login_page_negative.py  test_math.py
